--- a/style.css
+++ b/style.css
@@ -80,10 +80,7 @@ p {
 #menu {
   display: flex;
 }
-#menu-burger {
-  transition-duration: 400ms;
-  transform-origin: center;
-}
+
 #burger-container {
   position: relative;
   width: 30px;
@@ -298,7 +295,9 @@ p {
 
 .signup_image i {
   color: var(--basicgreen);
+  font-size: calc(18px + (44 + 44 * 0.4) * ((100vw - 360px) / 1280));
   margin-right: calc(10px + (20 + 20 * 0.4) * ((100vw - 360px) / 1280));
+  margin-top: calc(10px + (16 + 16 * 1) * ((100vw - 360px) / 1280));
 }
 
 .signup_transparent-box h4 {
@@ -306,7 +305,7 @@ p {
   font-style: normal;
   font-weight: 300;
   font-size: calc(16px + (10 + 10 * 0.4) * ((100vw - 360px) / 1280));
-  margin-bottom: calc(3px + (13 + 13 * 0.4) * ((100vw - 360px) / 1280));
+  margin-bottom: calc(3px + (13 + 13 * 0.5) * ((100vw - 360px) / 1280));
 }
 
 .signup_transparent-box span {
@@ -338,7 +337,6 @@ p {
   flex-direction: column;
   align-items: center;
   color: var(--white);
-  font-weight: 300;
   line-height: 10px;
 }
 
@@ -373,6 +371,7 @@ p {
   color: var(--white);
   opacity: 0.7;
   font-size: 18px;
+  padding-left: 5px;
 }
 
 .pachage_section-container {
@@ -395,6 +394,25 @@ p {
 
 .package_product-btn {
   display: flex;
+  position: relative;
+}
+
+.product_btn_middle-or {
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  top: 2px;
+  left: 46.5%;
+  background-color: var(--secondgreen);
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4ca368;
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 400;
 }
 
 .product_btn {
@@ -434,7 +452,7 @@ p {
 }
 
 /* *************card_section *****************/
-.card_section-title {
+#card_section-title {
   text-align: center;
   font-size: calc(18px + (30 + 30 * 0.4) * ((100vw - 360px) / 1280));
   font-weight: 300;
@@ -593,16 +611,29 @@ footer {
     font-size: 16px;
   }
 
-  .signup_image i {
-    font-size: 28px;
-  }
-
   .signup_item i {
     font-size: 18px;
   }
 
+  .signup_item {
+    font-size: 14px;
+  }
   .signup_arrow-box {
     font-size: 24px;
+  }
+
+  .product_btn {
+    width: 160px;
+    height: 24px;
+    font-size: 16px;
+  }
+
+  .product_btn_middle-or {
+    height: 18px;
+    width: 18px;
+    top: 3px;
+    left: 47%;
+    font-size: 11px;
   }
 
   .subfuoter_container {
@@ -702,6 +733,9 @@ footer {
     margin: 0 20px 0 20px;
   }
 
+  .main_section-textbox h1 {
+    white-space: pre-wrap;
+  }
   .form_section-box form input {
     width: 200px;
     height: 60px;
@@ -716,5 +750,19 @@ footer {
 
   .form_section-bottomtxt span {
     font-size: 16px;
+  }
+
+  .product_btn {
+    width: 185px;
+    height: 28px;
+    font-size: 18px;
+  }
+
+  .product_btn_middle-or {
+    height: 26px;
+    width: 26px;
+    top: 1px;
+    left: 46%;
+    font-size: 13px;
   }
 }
