--- a/style.css
+++ b/style.css
@@ -470,36 +470,44 @@ p {
 
 .service_card-topline {
   position: absolute;
-  top: 0;
+  top: -1px;
   margin: 0;
+  width: 60px;
+  height: 1.3px;
+  background: gray;
+  outline: none;
+  border: none;
 }
 
-.service_card-middlelineR {
-  margin: 0;
+.service_card:hover .service_card-topline {
+  background: var(--basicgreen);
+}
+
+.service_card-middleline {
   position: absolute;
   top: 32%;
-  left: 72%;
-  width: 29%;
+  width: 100%;
+  height: 1px;
+  background: gray;
+  outline: none;
+  border: none;
+  z-index: -1;
 }
 
-.service_card-middlelineL {
-  margin: 0;
-  position: absolute;
-  top: 32%;
-  right: 72%;
-  width: 29%;
-}
-
-.chacked_icon {
-  color: var(--snow);
-  background-color: var(--basicgreen);
+.nobenefit::before {
+  font-family: "FontAwesome";
+  content: "\f058";
+  color: gray;
+  margin-right: 4px;
   border-radius: 100%;
   font-size: 12px;
 }
 
-.unchecked_icon {
-  color: var(--snow);
-  background-color: gray;
+.isbenefit::before {
+  font-family: "FontAwesome";
+  content: "\f058";
+  color: var(--basicgreen);
+  margin-right: 4px;
   border-radius: 100%;
   font-size: 12px;
 }
@@ -536,6 +544,7 @@ p {
 }
 
 .service_price {
+  background: var(--white);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -543,8 +552,10 @@ p {
   width: 100px;
   height: 100px;
   border: 2px solid var(--basicgreen);
+  outline: var(--whitesmoke) solid 2.5px;
   border-radius: 50%;
   padding: 8px;
+  z-index: 1;
 }
 
 .service_price span {
